# droppedneedle-desktop

./: .gitignore  .prettierignore  README.md  VENDORED.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: VERIFICATION.md
scripts/: sync-upstream.mjs  vendored-manifest.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: connection.rs  lib.rs  media_proxy.rs  secrets.rs  tray.rs
src/lib/: colors.ts  constants.ts  types.ts
src/lib/api/: api-utils.ts  client.spec.ts  client.ts
src/lib/components/: AlbumCard.svelte  AlbumCard.svelte.spec.ts  AlbumCardOverlay.svelte  AlbumCardSkeleton.svelte  AlbumImage.svelte  AlbumRequestButton.svelte  ArtistCardDownloadButton.svelte  ArtistCardSkeleton.svelte  ArtistImage.svelte  ArtistRemovedModal.svelte  AudioQualityBadge.svelte  BaseImage.svelte  BaseImage.svelte.spec.ts  ConcertsNavBadge.svelte  ContextMenu.svelte  ContextMenu.svelte.spec.ts  DeleteAlbumModal.svelte  EmptyState.svelte  FollowControl.svelte  HeroBackdrop.svelte  LibraryBadge.svelte  NewReleasesNavBadge.svelte  Pagination.svelte  RequestCard.svelte  SearchArtistCard.svelte  SearchArtistCard.svelte.spec.ts  SearchSuggestions.svelte  SearchSuggestions.svelte.spec.ts  SearchTopResult.svelte  SourceBadge.svelte  Toast.svelte  ViewMoreAlbumCard.svelte  ViewMoreArtistCard.svelte  WantedRetryingCard.svelte  WantedWatchCard.svelte
src/lib/desktop/: Topbar.svelte  autostart.ts  connection.ts  media.ts  notifications.ts  profiles.svelte.ts  secrets.ts  session.ts  sessionEvents.ts  sse.ts  theme.ts  transport.ts  tray.ts
src/lib/queries/: HomeQueryKeyFactory.ts  IndexedDbPersister.svelte.ts  QueryClient.ts  QueryProvider.svelte  VersionQuery.svelte.ts  VersionQueryKeyFactory.ts
src/lib/stores/: authStore.svelte.ts  batchDownloadStatus.svelte.ts  clock.svelte.ts  discographyDownload.svelte.ts  downloadsActivity.svelte.ts  errorModal.ts  imageSettings.ts  integration.ts  library.ts  musicSource.spec.ts  musicSource.ts  pendingApprovalCountStore.svelte.ts  recentlyAdded.ts  search.ts  serviceStatus.spec.ts  serviceStatus.ts  syncStatus.svelte.ts  toast.ts  version.svelte.ts
src/lib/utils/: abortController.ts  albumRemove.ts  albumRequest.ts  dedupe.spec.ts  dedupe.ts  dismissedPrompts.ts  downloadHelper.ts  enrichment.spec.ts  enrichment.ts  entityRoutes.ts  errorHandling.ts  (+13 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+85 files in other folders)
