[package]
name = "droppedneedle-desktop"
version = "0.4.3"
description = "Unofficial Windows desktop management client for DroppedNeedle"
authors = ["Touki"]
license = "AGPL-3.0-only"
repository = "https://github.com/v8eta/droppedneedle-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
# dangerous-settings: allows per-request `danger` option for user-opted
# self-signed-cert LAN servers (off by default, per-profile toggle)
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
# Windows-only backend: the shipping target is Windows; on Linux (headless
# dev checks) keyring compiles with no backend instead of dragging in dbus.
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
